correction 3 - animation iphone

--- a/sass/utiles/_animations.scss
+++ b/sass/utiles/_animations.scss
@@ -42,14 +42,40 @@
 
 .menu-secondaire{
     animation: menu 500ms both;
+    -webkit-animation: menu 500ms both;
+    -moz-animation: menu 500ms both;
     @for $i from 1 through 4 {
         &--#{$i} {
             animation-delay: 100ms * $i;
+            -webkit-animation-delay: 100ms * $i;
+            -moz-animation-delay:  100ms * $i;
         }
     }
 }
 
 @keyframes menu {
+    0% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes menu {
+    0% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes menu {
     0% {
         transform: translateY(10px);
         opacity: 0;
